<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hal_flir_d46</name>
  <version>1.0.0</version>
  <description>Control Flir D46 Pan/Tilt Unit</description>
  <maintainer email="ronca.pat@gmail.com">Patrick Roncagliolo</maintainer>
  <license>GPL</license>

  <depend>ament_cmake</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>serial</depend>
  <depend>builtin_interfaces</depend>
  <depend>ptu_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
